# aayojak-lib

./: .gitignore  Makefile  README.md
aayojak/: Cargo.toml
aayojak-core/: Cargo.toml
aayojak-core/src/: main.rs
aayojak-core/src/structures/: todo.rs
aayojak-core/tests/: todo_test.rs
aayojak-lib/: Cargo.toml  Makefile
aayojak-lib/src/: lib.rs
aayojak-lib/src/structures/: todo.rs
aayojak-lib/src/traits/: typed.rs
aayojak-lib/tests/: todo_test.rs
aayojak/src/: lib.rs  main.rs
aayojak/src/structures/: todo.rs
aayojak/src/tests/: mod.rs
life-track-hub/: Cargo.toml
life-track-hub/src/: main.rs
life-track-hub/src/structures/: todo.rs
organisator/: Cargo.toml
organisator/src/: main.rs
organisator/src/tests/: todo_test.rs
