[package]
name = "aayojak_lib"
version = "0.0.1"
license = "MIT"
description = "library crate for aayojak"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.33", features = ["local-offset", "serde"] }
serde = { version = "1.0", features = ["derive"] }