[package]
name = "aayojak_lib"
version = "0.0.2"
license = "MIT"
description = "library crate for aayojak"
edition = "2021"
rust-version = "1.78"
authors = ["Paramvir Das"]
readme = "../README.md"
repository = "https://github.com/paramsdas/aayojak-lib/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version= "0.4.38", features=["serde"]}
serde = { version = "1.0", features = ["derive"] }